syntax = "proto3"; 

message TestResults {
  int32 total_nums = 1;
  repeated Tests tests = 2;
}
message Tests {
  string tr_id = 1;
  string date = 2;
}
message TestItem {
  string name = 1;
  string ti_id = 2;
  string value = 3;
  string unit = 4;
  string standard = 5;
  int32 tendency = 6;
  int32 status = 7;
}
message TestResult {
  string tr_id = 1;
  string date = 2;
  repeated TestItem results = 3;
}
